--- a/bridgehand.glade
+++ b/bridgehand.glade
@@ -1089,6 +1089,38 @@
 	  </child>
 
 	  <child>
+	    <widget class="GtkToolButton" id="button_prev_board">
+	      <property name="visible">True</property>
+	      <property name="tooltip" translatable="yes">Previous board</property>
+	      <property name="stock_id">gtk-go-back</property>
+	      <property name="visible_horizontal">True</property>
+	      <property name="visible_vertical">True</property>
+	      <property name="is_important">False</property>
+	      <signal name="clicked" handler="on_button_prev_board_clicked" last_modification_time="Tue, 11 Dec 2007 19:43:50 GMT"/>
+	    </widget>
+	    <packing>
+	      <property name="expand">False</property>
+	      <property name="homogeneous">True</property>
+	    </packing>
+	  </child>
+
+	  <child>
+	    <widget class="GtkToolButton" id="button_next_board">
+	      <property name="visible">True</property>
+	      <property name="tooltip" translatable="yes">Next board</property>
+	      <property name="stock_id">gtk-go-forward</property>
+	      <property name="visible_horizontal">True</property>
+	      <property name="visible_vertical">True</property>
+	      <property name="is_important">False</property>
+	      <signal name="clicked" handler="on_button_next_board_clicked" last_modification_time="Tue, 11 Dec 2007 19:43:57 GMT"/>
+	    </widget>
+	    <packing>
+	      <property name="expand">False</property>
+	      <property name="homogeneous">True</property>
+	    </packing>
+	  </child>
+
+	  <child>
 	    <widget class="GtkSeparatorToolItem" id="separatortoolitem2">
 	      <property name="visible">True</property>
 	      <property name="draw">True</property>
@@ -1322,7 +1354,7 @@
 	      <child>
 		<widget class="GtkLabel" id="label_south">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">Süd</property>
+		  <property name="label" translatable="yes">South</property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">True</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1379,7 +1411,7 @@
 	      <child>
 		<widget class="GtkLabel" id="label_north">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">Nord</property>
+		  <property name="label" translatable="yes">North</property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">True</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1436,7 +1468,7 @@
 	      <child>
 		<widget class="GtkLabel" id="label_east">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">Ost</property>
+		  <property name="label" translatable="yes">East</property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">True</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1528,8 +1560,8 @@
 	    <widget class="GtkLabel" id="label_tricks">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="label" translatable="yes">NS: 0
-EW: 0</property>
+	      <property name="label" translatable="yes">NS: %d
+EW: %d</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_RIGHT</property>
@@ -1571,7 +1603,7 @@ EW: 0</property>
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
-		  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+		  <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
 		  <property name="shadow_type">GTK_SHADOW_NONE</property>
 		  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
@@ -1908,6 +1940,7 @@ EW: 0</property>
 
   <child>
     <widget class="GtkVBox" id="vbox4">
+      <property name="border_width">5</property>
       <property name="visible">True</property>
       <property name="homogeneous">False</property>
       <property name="spacing">0</property>
@@ -3277,7 +3310,7 @@ EW: 0</property>
 	  <property name="visible">True</property>
 	</widget>
 	<packing>
-	  <property name="padding">0</property>
+	  <property name="padding">5</property>
 	  <property name="expand">True</property>
 	  <property name="fill">True</property>
 	</packing>
@@ -3303,89 +3336,9 @@ EW: 0</property>
 	  </child>
 	</widget>
 	<packing>
-	  <property name="padding">5</property>
-	  <property name="expand">False</property>
-	  <property name="fill">False</property>
-	</packing>
-      </child>
-    </widget>
-  </child>
-</widget>
-
-<widget class="GtkWindow" id="window_info">
-  <property name="visible">True</property>
-  <property name="title" translatable="yes">Info</property>
-  <property name="type">GTK_WINDOW_TOPLEVEL</property>
-  <property name="window_position">GTK_WIN_POS_NONE</property>
-  <property name="modal">False</property>
-  <property name="resizable">True</property>
-  <property name="destroy_with_parent">False</property>
-  <property name="decorated">True</property>
-  <property name="skip_taskbar_hint">False</property>
-  <property name="skip_pager_hint">False</property>
-  <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
-  <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
-  <property name="focus_on_map">True</property>
-  <property name="urgency_hint">False</property>
-  <signal name="delete_event" handler="on_window_info_delete_event" last_modification_time="Sat, 17 Feb 2007 12:28:33 GMT"/>
-  <signal name="destroy_event" handler="on_window_info_delete_event" last_modification_time="Sat, 17 Feb 2007 12:28:47 GMT"/>
-
-  <child>
-    <widget class="GtkVBox" id="vbox5">
-      <property name="visible">True</property>
-      <property name="homogeneous">False</property>
-      <property name="spacing">0</property>
-
-      <child>
-	<widget class="GtkLabel" id="info_label">
-	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">&lt;b&gt;tenace&lt;/b&gt;
-
-(C) 2007 Christoph Berg &amp;lt;cb@df7cb.de&amp;gt;</property>
-	  <property name="use_underline">False</property>
-	  <property name="use_markup">True</property>
-	  <property name="justify">GTK_JUSTIFY_CENTER</property>
-	  <property name="wrap">False</property>
-	  <property name="selectable">False</property>
-	  <property name="xalign">0.5</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">5</property>
-	  <property name="ypad">0</property>
-	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-	  <property name="width_chars">-1</property>
-	  <property name="single_line_mode">False</property>
-	  <property name="angle">0</property>
-	</widget>
-	<packing>
 	  <property name="padding">0</property>
 	  <property name="expand">False</property>
 	  <property name="fill">False</property>
-	</packing>
-      </child>
-
-      <child>
-	<widget class="GtkHButtonBox" id="hbuttonbox3">
-	  <property name="visible">True</property>
-	  <property name="layout_style">GTK_BUTTONBOX_DEFAULT_STYLE</property>
-	  <property name="spacing">0</property>
-
-	  <child>
-	    <widget class="GtkButton" id="info_ok">
-	      <property name="visible">True</property>
-	      <property name="can_default">True</property>
-	      <property name="can_focus">True</property>
-	      <property name="label">gtk-ok</property>
-	      <property name="use_stock">True</property>
-	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <property name="focus_on_click">True</property>
-	      <signal name="clicked" handler="on_info_ok_clicked" last_modification_time="Sat, 17 Feb 2007 12:28:13 GMT"/>
-	    </widget>
-	  </child>
-	</widget>
-	<packing>
-	  <property name="padding">5</property>
-	  <property name="expand">True</property>
-	  <property name="fill">True</property>
 	</packing>
       </child>
     </widget>
@@ -3942,6 +3895,24 @@ EW: 0</property>
       </child>
     </widget>
   </child>
+</widget>
+
+<widget class="GtkAboutDialog" id="aboutdialog1">
+  <property name="visible">True</property>
+  <property name="destroy_with_parent">True</property>
+  <property name="name" translatable="yes">Tenace</property>
+  <property name="copyright" translatable="yes">(c) 2007 Christoph Berg</property>
+  <property name="comments" translatable="yes">Bridge Hand Viewer and Editor</property>
+  <property name="license" translatable="yes">GPL v2</property>
+  <property name="wrap_license">False</property>
+  <property name="website">http://www.df7cb.de/bridge/tenace/</property>
+  <property name="website_label" translatable="yes">Homepage</property>
+  <property name="authors">Christoph Berg &lt;cb@df7cb.de&gt;</property>
+  <property name="documenters"></property>
+  <property name="translator_credits" translatable="yes" comments="TRANSLATORS: Replace this string with your names, one name per line.">translator-credits</property>
+  <signal name="close" handler="on_aboutdialog1_close" last_modification_time="Tue, 11 Dec 2007 22:01:18 GMT"/>
+  <signal name="response" handler="on_aboutdialog1_response" last_modification_time="Tue, 11 Dec 2007 22:01:26 GMT"/>
+  <signal name="delete_event" handler="on_aboutdialog1_delete_event" last_modification_time="Tue, 11 Dec 2007 22:01:38 GMT"/>
 </widget>
 
 </glade-interface>
